# kanban

./: .env.example  .gitignore  .gitmodules  .srl  AGENTS.MD  Claude.MD  README.MD  docker-compose.yml  package-lock.json  package.json  start.sh
.agent/workflows/: rebuild_finance.md
.codellm/rules/: python.mdc  webdevelop.mdc
.github/: copilot-instructions.md
agent-skills/: rebuild-images.md  rebuild-workspace.md  run-e2e-tests.md
certbot/: Dockerfile  entrypoint.sh
certbot/scripts/: generate-self-signed.sh  issue-cert.sh  issue-certificate.sh  issue-sandbox-certificate.sh  issue-team-certificate.sh  issue-workspace-certificate.sh  post-renewal.sh  renew-certificates.sh
coredns/: Corefile  Dockerfile
coredns/zones/: kanban.db
docs/: Backlog.json
docs/architecture/: data-flow.md  infrastructure.md  (+7 more)
e2e-tests/: Dockerfile  package-lock.json  package.json  playwright.config.ts  run-tests.sh
kanban-agents/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
kanban-agents/agents/: controller.py  kanban_client.py  personalities.py  webhook_server.py
kanban-agents/config/: settings.py
llm-proxy/: server.py  start.sh
orchestrator/: Dockerfile  requirements.txt
scripts/: add-entra-external-id-secrets.sh  deploy-production.sh  deploy-sandbox.sh  deploy_sandbox.sh  grant-app-keyvault-access.sh  populate-keyvault-secrets.sh  populate-keyvault.sh  rebuild-images.sh  rebuild-workspace.sh  restart-sandbox.sh  run-e2e-tests.sh  seed_app_templates.py  setup-azure-keyvault.sh  update-keyvault-secret.sh
team-template/: docker-compose.yml
tests/: pytest.ini
traefik/: traefik.yml
(+214 files in other folders)
